# kuzet

./: .gitignore  buf.gen.yaml
api/: service.proto
log-service/: Dockerfile  go.mod  go.sum
log-service/cmd/app/: main.go
proto/api/: service.pb.go  service_grpc.pb.go
scanner/: Cargo.toml  Dockerfile  build.rs
scanner/src/scanner/: server.rs
